--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         gtag('config', 'UA-157470849-1');
     </script>
 
-    <title>Ingenious Hackathon</title>
+    <title>Cross WoC</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -52,10 +52,10 @@
                     2020</span>
             </p>
             <h2 class="banner-title">
-                Ingenious <br> Hackathon
+                Cross <br> WoC
             </h2>
             <div class="banner-info">
-                <span>School of Engineering and Applied Science,<br /> Ahmedabad University</span>
+                <span>Delhi Technological University<br /> DTU/DCE</span>
             </div>
 
             <div class="countdown">
@@ -291,7 +291,7 @@
             <img src="./images/animated-svg/timetop animated.svg" alt="" class="timeline-g">
         </div>
     </section>
-
+    <!--
     <section class="sponsor-sec" id="sponsor">
         <div class="content">
             <div class="title">Our Current Sponsors</div>
@@ -408,7 +408,7 @@
         </div>
 
     </section>
-
+-->
     <section class="faq" id="faq">
 
         <div class="title">FAQ</div>
