--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 About Us
             </div>
             <div class="text">
-                The Ingenious Hackathon is a 36-hour intensive coding competition partnered with IEEE. The problems are
+                The CrossWoC is a 8-week  development period partnered with IEEE. The problems are
                 of a wide range and designed while keeping in mind an industry-oriented approach, with support from many
                 partner companies.<br /><br />
                 This event has been, in the past, one of the most sought after and prestigious events of the festival
