Fixed countdown, made background blue, and a few other minor things

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description"
-        content="Ingenious Hackathon is a 36-hour intensive coding competition partnered with IEEE. The problems are
-    of a wide range and designed while keeping in mind an industry-oriented approach, with support from many
-    partner companies. Organized at School of Engineering and Applied Science, Ahmedabad University as a part of its Technological festival Ingenium">
+    <meta name="Description" content="CrossWoC is a six-week long open-source which give programmers and innovators an opportunity to bring out their nascent talent and find intriguing solutions to real-world problems.">
 
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./bootstrap-grid.css">
@@ -40,7 +37,7 @@
             <li><a class="link" href="#schedule">Schedule</a></li>
             <li><a class="link" href="#sponsor">Sponsors</a></li>
             <li><a class="link" href="#faq">FAQs</a></li>
-            <li><a href="#reach-us" class="link">Reach Us</a></li>
+            <li><a class="link" href="#reach-us">Reach Us</a></li>
             <li><a class="link" href="#contact-us">Contact Us</a></li>
 
         </div>
@@ -95,12 +92,8 @@
                 About Us
             </div>
             <div class="text">
-                The CrossWoC is a 8-week  development period partnered with IEEE. The problems are
-                of a wide range and designed while keeping in mind an industry-oriented approach, with support from many
-                partner companies.<br /><br />
-                This event has been, in the past, one of the most sought after and prestigious events of the festival
-                with a large footfall from across the state. Every team works on the selected problem and is evaluated
-                for their progress, innovation, and the practicality of their work, on regular intervals.
+                The CrossWoC is a 8-week open-source development period partnered with IEEE DTU which give programmers and innovators an opportunity to bring out their nascent talent and find intriguing solutions to real-world problems. endl; <br><br>
+                The event is a great learning opportunity for both experienced programmers as well as newbies because it takes a deep dive into the world of open-source programming.
             </div>
 
         </div>
