Location fixed and detailes added

--- a/index.html
+++ b/index.html
@@ -182,105 +182,104 @@
 
     <section class="timeline" id="schedule">
         <div class="content">
-            <div class="title">Schedule</div>
+            <div class="title">Timeline</div>
             <div class="date-links">
-                <button id="14th" aria-label="Schedule 14th March">14<sup>th</sup>March</button>
-                <button id="15th" class="current-day" aria-label="Schedule 15th March">15<sup>th</sup>March</button>
+                <button id="13th" aria-label="Schedule 13th February">13<sup>th</sup>February'20</button>
+                <button id="28th" class="current-day" aria-label="Schedule 28th March">28<sup>th</sup>March'20</button>
             </div>
             <div class="schedule-list">
-                <div id="14th list">
+                <div id="13th list">
                     <p class="list-element left col-6">
 
-                        <span class="time">8:30 am</span>
-                        <span class="text">Registrations and Breakfast</span>
+                        <!-- <span class="time">8:30 am</span> -->
+                        <span class="text">Application Open</span>
 
                     </p>
                     <p class="list-element right offset-6 col-6">
 
-                        <span class="time">9:30 am </span>
-                        <span class="text"> Inauguration</span>
+                        <!-- <span class="time">9:30 am </span> -->
+                        <span class="text">Application Deadline</span>
 
                     </p>
                     <p class="list-element left col-6">
 
-                        <span class="time">10:30 am </span>
-                        <span class="text">Hacking Starts</span>
+                        <!-- <span class="time">10:30 am </span> -->
+                        <span class="text">Coding</span>
 
                     </p>
                     <p class="list-element right offset-6 col-6">
 
-                        <span class="time">1:00 pm</span>
-                        <span class="text">Lunch along with networking</span>
+                        <!-- <span class="time">1:00 pm</span> -->
+                        <span class="text">Evaluation</span>
 
                     </p>
                     <p class="list-element left col-6">
 
-                        <span class="time">5:00 pm </span>
-                        <span class="text">High Tea</span>
+                        <!-- <span class="time">5:00 pm </span> -->
+                        <span class="text">Results Announcement</span>
 
                     </p>
-                    <p class="list-element right offset-6 col-6">
+                    <!-- <p class="list-element right offset-6 col-6"> -->
 
-                        <span class="time">06:00 pm </span>
-                        <span class="text">Discussing your ideas with the mentors</span>
+                        <!-- <span class="time">06:00 pm </span> -->
+                        <!-- <span class="text">Discussing your ideas with the mentors</span> -->
 
-                    </p>
-                    <p class="list-element left col-6">
+                    <!-- </p> -->
+                    <!-- <p class="list-element left col-6"> -->
 
-                        <span class="time">08:00 pm </span>
-                        <span class="text">Dinner</span>
-
-                    </p>
+                        <!-- <span class="time">08:00 pm </span> -->
+                        <!-- <span class="text">Dinner</span> -->
+                    <!-- </p> -->
                 </div>
 
 
                 <div id="15th list" class="hidden">
                     <p class="list-element left col-6">
 
-                        <span class="time">01:00 am</span>
+                        <!-- <span class="time">01:00 am</span> -->
                         <span class="text"> Fun Activities</span>
 
                     </p>
                     <p class="list-element right offset-6 col-6">
 
-                        <span class="time">08:00 am</span>
+                        <!-- <span class="time">08:00 am</span> -->
                         <span class="text">Breakfast</span>
 
                     </p>
                     <p class="list-element left col-6">
 
-                        <span class="time">08:30 am </span>
+                        <!-- <span class="time">08:30 am </span> -->
                         <span class="text">Discussing your final thoughts with mentors</span>
 
                     </p>
                     <p class="list-element right offset-6 col-6">
 
-                        <span class="time">12:30 pm</span>
+                        <!-- <span class="time">12:30 pm</span> -->
                         <span class="text">Lunch</span>
 
                     </p>
                     <p class="list-element left col-6">
 
-                        <span class="time">03:00 pm </span>
+                        <!-- <span class="time">03:00 pm </span> -->
                         <span class="text">Discussing your final outcome with mentors and judges</span>
 
                     </p>
                     <p class="list-element right offset-6 col-6">
 
-                        <span class="time">06:00 pm </span>
+                        <!-- <span class="time">06:00 pm </span> -->
                         <span class="text">Discussing your ideas with the mentors</span>
 
                     </p>
                     <p class="list-element left col-6">
 
-                        <span class="time">05:00 pm </span>
+                        <!-- <span class="time">05:00 pm </span> -->
                         <span class="text">Declaring TOP-6 teams and final presentations in the auditorium.
                         </span>
 
                     </p>
                     <p class="list-element right offset-6 col-6">
 
-                        <span class="time">06:30 pm </span>
+                        <!-- <span class="time">06:30 pm </span> -->
                         <span class="text">Final winner declaration and distribution of goodies</span>
 
                     </p>
@@ -524,16 +523,15 @@
                 <div class="mapouter">
                     <div class="gmap_canvas">
                         <iframe title="map"
-                            src="https://maps.google.com/maps?q=School%20of%20Engineering%20and%20Applied%20Science%2CAhmedabad&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d55968.01203526608!2d77.1373902!3d28.7493945!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x87d470ca1c30d1b0!2sDelhi%20Technological%20University!5e0!3m2!1sen!2sin!4v1608573853249!5m2!1sen!2sin"></iframe>
                     </div>
                 </div>
 
                 <div class="venue">
-                    <h3>Venue:</h3> School of Engineering and Applied Science,<br /> Ahmedabad University
-                    Commerce Six Roads,<br /> Navrangpura, Ahmedabad- 380009
+                    <h3>Location</h3>Delhi Technological University,<br /> Shahbad Daulatpur, Main Bawana Road,<br />  Delhi-110042. India,
 
                     <a class="dir-btn"
-                        href="https://www.google.com/maps/dir//School+of+Engineering+and+Applied+Science+library,+University+Area,+Ahmedabad,+Gujarat+380009,+India/@23.0372598,72.5521127,18z/data=!4m15!1m6!3m5!1s0x395e849332310a6f:0x30dd8e1eb52ecdb3!2sSchool+of+Engineering+and+Applied+Science+library!8m2!3d23.0375829!4d72.5521224!4m7!1m0!1m5!1m1!1s0x395e849332310a6f:0x30dd8e1eb52ecdb3!2m2!1d72.5521227!2d23.0375829?hl=en-US"
+                        href="https://www.google.com/maps/dir//Delhi+Technological+University+Entrance+Gate,+Delhi+Technological+University,+Sector+17,+Rohini,+Delhi/@28.745217,77.0818853,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x390d01242c91efaf:0xbb4573045b4b5348!2m2!1d77.1169907!2d28.7451463?hl=en-US"
                         target="_blank" rel="noreferrer noopener">Direction</a>
                 </div>
             </div>
@@ -541,59 +539,133 @@
         </div>
     </section>
     <section class="contact-us" id="contact-us">
-        <div class="title">Contact Us</div>
+        <div class="title">About IEEE-DTU</div>
         <div class="content">
-            <img src="./images/animated-svg/contact animated.svg" alt="" class="contact-g">
+            <div>
+                <p class="mx-3">IEEE DTU Student Branch , under the aegis of IEEE, is the oldest student branch in Delhi Section with an illustrious history of over three decades.
 
-            <div class="list">
+                    Under the invaluable guidance of Dr. J. Panda, IEEE DTU has emerged as one of the most active and innovative student branches in India. IEEE DTU organizes a plethora of events around the year such as TECHWEEK, REPERTOIRE and the annual technical festival TROIKA to instil a scientific temperament in students and to cater to the needs of their inquisitive nature .IEEE DTU is also renowned for its publications- ECHO, a magazine for freshers, IOTA, the annual technical magazine, TRIGGER, the TROIKA souvenir, and The Troika Times.</p>
+            </div>
+
+            <!-- <img src="./images/animated-svg/contact animated.svg" alt="" class="contact-g"> -->
+
+            <!-- <div class="list">
                 <div class="contact-ele">
                     <img src="https://img.icons8.com/officel/40/000000/whatsapp.png" alt="">
                     <div class="details"><a href="tel:+91-9427454248"><span class="name">Nisarg
                                 Shah</span>
                             +91-9427454248</a></div>
-                </div>
-                <div class="contact-ele">
+                </div> -->
+                <!-- <div class="contact-ele">
                     <img src="https://img.icons8.com/officel/40/000000/whatsapp.png" alt="">
                     <div class="details"><a href="tel:+91-9825864164"> <span class="name">Manav
                                 Darji</span>
                             +91-9825864164</a></div>
-                </div>
-
+                </div> -->
+<!-- 
                 <div class="contact-ele">
                     <img src="https://img.icons8.com/officel/40/000000/whatsapp.png" alt="">
                     <div class="details"><a href="tel:+917984426876"><span class="name">Meet Modi</span>
                             +91-7984426876</a></div>
-                </div>
+                </div> -->
 
 
                 <div class="contact-ele">
-                    <img src="./images/instagram-logo.png" class="icon" alt="">
-                    <div class="details"><a href="https://www.instagram.com/tech.ingenium/?hl=en" class="name"
-                            target="_blank" style="cursor: pointer;">@tech.ingenium</a>
+                    <!-- <img src="./images/instagram-logo.png" class="icon" alt=""> -->
+                    <div class="details"><a href="https://www.instagram.com/ieee.dtu/" class="name"
+                            target="_blank" style="cursor: pointer;">
+                            <img src="./images/instagram-logo.png" class="icon" alt=""></a>
                     </div>
                 </div>
-                <div class="contact-ele">
+                <!-- <div class="contact-ele">
                     <img src="https://img.icons8.com/color/48/000000/gmail.png" class="icon" alt="">
                     <div class="details"><a href="mailto:ingenium@ahduni.edu.in" class="name site"
                             style="cursor: pointer;">ingenium@ahduni.edu.in</a>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="contact-ele">
-                    <img src="https://img.icons8.com/ios-filled/64/000000/link.png" class="icon" alt="">
+                    <!-- <img src="https://img.icons8.com/fluent/48/000000/facebook-new.png" class="icon" alt=""> -->
                     <div class="details">
-                        <a class="name site" href="https://ahduni.edu.in/seas/ingenium" target="_blank"
-                            style="cursor: pointer;" rel="noreferrer noopener">https://ahduni.edu.in/seas/ingenium</a>
+                        <a class="name site" href="https://www.facebook.com/ieeedtu/" target="_blank"
+                            style="cursor: pointer;" rel="noreferrer noopener">
+                            <img src="https://img.icons8.com/fluent/48/000000/facebook-new.png" class="icon" alt=""></a>
                     </div>
                 </div>
             </div>
         </div>
+
     </section>
+
+    <section class="contact-us" id="contact-us">
+        <div class="title">Contact Us</div>
+        <div class="content">
+            <!-- <div>
+                <p class="mx-3">For any queries, write and email to 
+                    <img src="https://img.icons8.com/color/48/000000/gmail.png" class="icon" alt="">
+                    <div class="details"><a href="ieeecsdtu@gmail.com" class="name site"
+                        style="cursor: pointer;">ieeecsdtu@gmail.com</a>
+                </div> -->
+
+            <img src="./images/animated-svg/contact animated.svg" alt="" class="contact-g">
+
+            <div class="list">
+                <!-- <div class="contact-ele">
+                    <img src="https://img.icons8.com/officel/40/000000/whatsapp.png" alt="">
+                    <div class="details"><a href="tel:+91-9427454248"><span class="name">Nisarg
+                                Shah</span>
+                            +91-9427454248</a></div>
+                </div> -->
+                <!-- <div class="contact-ele">
+                    <img src="https://img.icons8.com/officel/40/000000/whatsapp.png" alt="">
+                    <div class="details"><a href="tel:+91-9825864164"> <span class="name">Manav
+                                Darji</span>
+                            +91-9825864164</a></div>
+                </div> -->
+<!-- 
+                <div class="contact-ele">
+                    <img src="https://img.icons8.com/officel/40/000000/whatsapp.png" alt="">
+                    <div class="details"><a href="tel:+917984426876"><span class="name">Meet Modi</span>
+                            +91-7984426876</a></div>
+                </div> -->
+
+
+                <div class="contact-ele">
+                    <img src="./images/ieedtu-logo.png" class="icon" alt="">
+                    <div class="details"><a href="https://ieeedtu.in/" class="name"
+                            target="_blank" style="cursor: pointer;">IEEE-DTU
+                            </a>
+                    </div>
+                </div>
+                <div class="contact-ele">
+                    <img src="https://img.icons8.com/color/48/000000/gmail.png" class="icon" alt="">
+                    <div class="details"><a href="ieeecsdtu@gmail.com" class="name site"
+                            style="cursor: pointer;">ieeecsdtu@gmail.com</a>
+                    </div>
+                </div>
+
+                <!-- <div class="contact-ele">
+                    <img src="https://img.icons8.com/fluent/48/000000/facebook-new.png" class="icon" alt="">
+                    <div class="details">
+                        <a class="name site" href="https://www.facebook.com/ieeedtu/" target="_blank"
+                            style="cursor: pointer;" rel="noreferrer noopener">
+                            <img src="https://img.icons8.com/fluent/48/000000/facebook-new.png" class="icon" alt=""></a>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+
     <footer>
-        <span class="us">Developed by<span>
-                <a href="https://github.com/arpitvaghela" target="_blank" rel="noreferrer noopener">Arpitsinh
-                    Vaghela</a> & <a href="https://github.com/Kaushal1011" target="_blank"
-                    rel="noreferrer noopener">Kaushal Patil</a>
+        <span class="us">Made with ❤️ by IEEE DTU<span>
+                <!-- <a href="https://github.com/arpitvaghela" target="_blank" rel="noreferrer noopener">Arpitsinh -->
+                    <!-- Vaghela</a> & <a href="https://github.com/Kaushal1011" target="_blank" -->
+                    <!-- rel="noreferrer noopener">Kaushal Patil</a> -->
     </footer>
     <script src="./main.js"></script>
 </body>
